# task-manager-core

./: .gitignore  README.md  pyproject.toml
task_manager/: models.py
